{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 9,
  "lineage": "3e5bdf30-5ce5-6d3a-81af-8aba56d574ff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975050107758:security-group/sg-0033ab59e3d7f617a",
            "description": "Managed from Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0033ab59e3d7f617a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Terraform-Firewall",
            "name_prefix": "",
            "owner_id": "975050107758",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow TLS"
            },
            "tags_all": {
              "Name": "Allow TLS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e745197c4c462b3c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975050107758:security-group-rule/sgr-0c34d78abbe20405d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c34d78abbe20405d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0033ab59e3d7f617a",
            "security_group_rule_id": "sgr-0c34d78abbe20405d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975050107758:security-group-rule/sgr-0951f308ee554007b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0951f308ee554007b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0033ab59e3d7f617a",
            "security_group_rule_id": "sgr-0951f308ee554007b",
            "tags": null,
            "tags_all": {},
            "to_port": 100
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}